2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeStructureTest.cs: New. Unit tests for 
	AvoidLargeStructureRule.

2008-04-26  Jb Evain  <jbevain@novell.com>

	* UseTypeEmptyTypesTest.cs: New tests for the new UseTypeEmptyTypesRule
	that checks for unecessary creation of empty array of types.
	* Makefile.am: add the new guy to the build.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* CompareWithStringEmptyEfficientlyTest.cs: New. This replace
	UsingStringLengthInsteadOfCheckingEmptyStringTest.cs with more test
	cases and the new test format.
	* UsingStringLengthInsteadOfCheckingEmptyStringTest.cs: removed

2008-04-20  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test case using generics.

2008-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Fix some cases (e.g. bad 
	values,	checking ctors instead of methods)... and add new ones. 
	Update tests to new format. 

2008-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test case where a private
	method is used in its declaring type's nested type(s) [Cedric Vivier]

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesTest.cs: Add test cases for
	[un]used generic types.
	* DontIgnoreMethodResultTest: Add test cases for Stack.Pop (which 
	we ignore on purpose). Renamed to *DoNot*IgnoreMethodResultRule.

2008-04-05  Sebastien Pouliot  <sebastien@ximian.com>

	* MathMinMaxCandidateTest.cs: New. Tests for MathMinMaxCandidateRule
	* Test.Rules.Performance.mdp: Add test to MD project file.

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementEqualsTypeTest.cs: New. Test for ImplementEqualsTypeRule.
	* Test.Rules.Performance.mdp: Add test to MD project file.

2008-03-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedParametersTest.cs: Add EventArgs test cases.

2008-03-05  Sebastien Pouliot  <sebastien@ximian.com>
